# busy-fermi

./: .env.example  .gitignore  CACHED_MODEL_SETUP.md  Dockerfile  model_manifest.json  package-lock.json  package.json  proxy.js  revised_implementation_plan.md
docker/: link-cached-models.sh
docker/custom_nodes/ComfyUI-UmeAiRT-Toolkit/: .cursorrules  .gitignore  .gitlab-ci.yml  AGENTS.md  CHANGELOG.md  LICENSE  README.md  TODO.md  __init__.py  fix_manifest_qwen.py  mkdocs.yml  pyproject.toml  requirements.txt  run_tests.py
docker/custom_nodes/ComfyUI-UmeAiRT-Toolkit/data/: model_manifest.json
docker/custom_nodes/ComfyUI-UmeAiRT-Toolkit/docs/: CNAME  architecture.md  changelog.md  contributing.md  getting-started.md  index.md
docker/custom_nodes/ComfyUI-UmeAiRT-Toolkit/docs/assets/: custom.css
docker/custom_nodes/ComfyUI-UmeAiRT-Toolkit/facedetailer_core/: detector.py  logic.py  utils.py
docker/custom_nodes/ComfyUI-UmeAiRT-Toolkit/modules/: block_inputs.py  block_lightning.py  block_loaders.py  block_nodes.py  block_passthrough.py  block_sampler.py  common.py  detail_daemon_nodes.py  detail_refiner.py  download_utils.py  extra_samplers.py  face_nodes.py  flux_sampler.py  image_analyze.py  image_nodes.py  logger.py  logic_nodes.py  ltx_audio_replacer.py  ltx_enhancer.py  ltx_extender.py  ltx_keyframe_generator.py  ltx_prompt_director.py  ltx_sampler.py  ltx_utils.py  manifest.py  monitor_hardware.py  optimization_utils.py  qwen_sampler.py  sampler_cache.py  sampler_controlnet.py  sampler_tasks.py  seedvr2_nodes.py  upscale_nodes.py  utils_nodes.py  video_extender.py  video_funcontrol.py  video_lightning.py  video_looper.py  video_optimization.py  video_output.py  (+7 more)
docker/custom_nodes/ComfyUI-UmeAiRT-Toolkit/seedvr2_core/: __init__.py  image_utils.py  progress.py  seedvr2_adapter.py  stitching.py  tiling.py
docker/custom_nodes/ComfyUI-UmeAiRT-Toolkit/tests/: _template_node_test.py  test_block_inputs.py  test_block_loaders.py  test_block_sampler.py  test_comfyui_runtime.py  test_common.py  test_detail_daemon_nodes.py  test_download_utils.py  test_extra_samplers.py  test_face_nodes.py  test_image_nodes.py  test_image_saver_civitai.py  test_image_saver_logic.py  test_image_saver_utils.py  test_integration.py  test_logic_nodes.py  test_ltx_audio_replacer.py  test_ltx_enhancer.py  test_ltx_extender.py  test_ltx_keyframe_generator.py  test_ltx_nodes.py  test_ltx_prompt_director.py  test_manifest.py  test_monitor_hardware.py  test_optimization.py  test_registration.py  test_sampler_cache.py  test_sampler_tasks.py  test_seedvr2_nodes.py  test_smoke.py  test_tooltips.py  test_traversal.py  test_upscale_nodes.py  test_utils_nodes.py  test_video_concat.py  test_video_slicer.py  test_video_unification.py  test_video_vace_prep.py
docker/custom_nodes/ComfyUI-UmeAiRT-Toolkit/usdu_core/: .tracking  usdu_main.py
docker/custom_nodes/ComfyUI-UmeAiRT-Toolkit/web/: umeairt_badges.js  umeairt_colors.js  umeairt_log_viewer.js  umeairt_lora_info.js  umeairt_monitor.css  umeairt_monitor.js  umeairt_signature.js  video_output.js
lib/: config.js  (+7 more)
(+75 files in other folders)
